[gd_scene load_steps=5 format=3 uid="uid://tpljimoicnm3"]

[ext_resource type="Script" path="res://ObstacleSpawn.gd" id="1_dqwau"]
[ext_resource type="Script" path="res://deleteObstacles.gd" id="2_7gak8"]
[ext_resource type="Script" path="res://Timer.gd" id="3_ewltw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ssy0q"]
size = Vector2(27, 653)

[node name="ObstacleSpawn" type="Node2D"]
position = Vector2(222, 2)
script = ExtResource("1_dqwau")

[node name="SpikesSpawnPoint" type="Node2D" parent="."]
position = Vector2(1163, 498)
scale = Vector2(2.44527, -13.2002)

[node name="BeesSpawnPoint1" type="Node2D" parent="."]
position = Vector2(991, 328)

[node name="BeesSpawnPoint2" type="Node2D" parent="."]
position = Vector2(976, 124)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-295, 7)
script = ExtResource("2_7gak8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-47, 317)
shape = SubResource("RectangleShape2D_ssy0q")

[node name="Timer" type="Timer" parent="."]
autostart = true
script = ExtResource("3_ewltw")

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="onTimerExpired"]
